--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,18 @@ repositories {
 		name = 'izzel'
 		url = 'https://maven.izzel.io/releases'
 	}
+	maven {
+		name = 'ParchmentMC'
+		url = 'https://maven.parchmentmc.org'
+	}
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.officialMojangMappings()
+	mappings loom.layered() {
+		officialMojangMappings()
+		parchment("org.parchmentmc.data:parchment-1.19.3:2023.03.12@zip")
+	}
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
@@ -46,7 +53,6 @@ dependencies {
 	// spigot
 	modImplementation "net.md-5:bungeecord-chat:1.16-R0.4"
 	modImplementation "io.izzel:tools:1.3.0"
-	modImplementation "com.mohistmc.remapper:mohistremapper:0.3"
 	modImplementation "com.mohistmc:dynamicenum:0.1"
 	modImplementation "com.mohistmc:i18n:0.1"
 
@@ -136,6 +142,10 @@ dependencies {
 
 base {
 	archivesName = project.archives_base_name
+}
+
+loom {
+	accessWidenerPath = file("src/main/resources/banner.accesswidener")
 }
 
 processResources {
