to:remaining 246 aw lines

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.14.17
 
 # Mod Properties
 mod_version = 1.0.0
-maven_group = com.example
-archives_base_name = fabric-example-mod
+maven_group = com.mohistmc.banner
+archives_base_name = banner-mod
 
 # Dependencies
 fabric_version=0.75.3+1.19.4
