--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.14.17
 # Mod Properties
 mod_version = 1.0.0
 maven_group = com.mohistmc.banner
-archives_base_name = banner-mod
+archives_base_name = banner-1.19.4
 
 # Dependencies
 fabric_version=0.75.3+1.19.4
