--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,14 @@ repositories {
 		name = 'ParchmentMC'
 		url = 'https://maven.parchmentmc.org'
 	}
+	maven {
+		name = "JirPack"
+		url = 'https://jitpack.io'
+	}
 }
 
 dependencies {
+	implementation 'org.projectlombok:lombok:1.18.22'
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings loom.layered() {
 		officialMojangMappings()
@@ -40,6 +45,7 @@ dependencies {
 	modImplementation "org.apache.maven.resolver:maven-resolver-connector-basic:1.7.3"
 	modImplementation "org.apache.maven.resolver:maven-resolver-transport-http:1.7.3"
 	compileOnly "org.jetbrains:annotations:21.0.1"
+	modImplementation "com.mohistmc:i18n:0.1"
 
 	// craftbukkit
 	modImplementation "org.fusesource.jansi:jansi:1.18"
@@ -54,7 +60,6 @@ dependencies {
 	modImplementation "net.md-5:bungeecord-chat:1.16-R0.4"
 	modImplementation "io.izzel:tools:1.3.0"
 	modImplementation "com.mohistmc:dynamicenum:0.1"
-	modImplementation "com.mohistmc:i18n:0.1"
 
 	modImplementation "com.google.guava:failureaccess:1.0.1"
 	modImplementation "com.google.guava:guava:31.0.1-jre"
@@ -92,38 +97,7 @@ dependencies {
 	modImplementation "com.github.LlamaLad7:MixinExtras:0.1.1"
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
 
-	//include - waiting for better way
-	include "org.yaml:snakeyaml:1.33"
-	include "org.apache.maven:maven-resolver-provider:3.8.5"
-	include "org.apache.maven.resolver:maven-resolver-connector-basic:1.7.3"
-	include "org.apache.maven.resolver:maven-resolver-transport-http:1.7.3"
-
-	include "org.fusesource.jansi:jansi:1.18"
-	include "jline:jline:2.14.6"
-	include "com.googlecode.json-simple:json-simple:1.1.1"
-	include "org.xerial:sqlite-jdbc:3.41.0.0"
-	include "com.mysql:mysql-connector-j:8.0.32"
-
-	include "net.md-5:SpecialSource:1.11.0"
-
-	include "net.md-5:bungeecord-chat:1.16-R0.4"
-	include "io.izzel:tools:1.3.0"
-	include "com.mohistmc.remapper:mohistremapper:0.3"
-	include "com.mohistmc:dynamicenum:0.1"
-	include "com.mohistmc:i18n:0.1"
-
-	include "org.slf4j:slf4j-api:2.0.6"
-
-	include "org.apache.logging.log4j:log4j-core:2.20.0"
-	include "org.apache.logging.log4j:log4j-iostreams:2.20.0"
-	include "org.apache.logging.log4j:log4j-api:2.20.0"
-	include "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0"
-	include "org.apache.commons:commons-lang3:3.12.0"
-	include "it.unimi.dsi:fastutil:8.5.12"
-	include "commons-io:commons-io:2.11.0"
-
 	include "com.github.LlamaLad7:MixinExtras:0.1.1"
-	include "commons-lang:commons-lang:2.6"
 }
 
 base {
