--- a/build.gradle
+++ b/build.gradle
@@ -150,7 +150,7 @@ static String ci_version() {
 		def conn = new URL("https://ci.codemc.io/job/MohistMC/job/Banner/api/json").openConnection()
 		conn.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36")
 		conn.connect()
-		def root = conn.content.toString()
+		def root = conn.content.text
 		def jsonSluper = new JsonSlurper()
 
 		String data = jsonSluper.parseText(root)
