--- a/build.gradle
+++ b/build.gradle
@@ -100,12 +100,12 @@ dependencies {
 	//class modify
 	modImplementation "com.github.LlamaLad7:MixinExtras:0.1.1"
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
-	modImplementation 'com.github.ArclightTeam:mixin-tools:1.0.0'
-	annotationProcessor 'com.github.ArclightTeam:mixin-tools:1.0.0'
+	modImplementation 'com.github.1798643961:mixin-tools:master-SNAPSHOT'
+	annotationProcessor 'com.github.1798643961:mixin-tools:master-SNAPSHOT'
 	implementation "com.github.phase:SrgLib:master-SNAPSHOT"
 	include "com.github.phase:SrgLib:master-SNAPSHOT"
 
-	include "com.github.ArclightTeam:mixin-tools:1.0.0"
+	include "com.github.1798643961:mixin-tools:master-SNAPSHOT"
 	include "com.github.LlamaLad7:MixinExtras:0.1.1"
 }
 
