--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,22 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
+minecraft_version=1.20-pre1
 loader_version=0.14.17
 
 # Mod Properties
 maven_group = com.mohistmc.banner
-archives_base_name = banner-1.19.4
+archives_base_name = banner-1.20
 
 # Dependencies
 fabric_version=0.75.3+1.19.4
 
 # loom
-# loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-# loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-# loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
-# loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-# loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
+loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+loom_fabric_repository=https://repository.hanbings.io/proxy/
