--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,10 @@
 pluginManagement {
     repositories {
         maven {
+            name = "Lss233's.Mirror();"
+            url = 'https://crystal.app.lss233.com/repositories/minecraft/'
+        }
+        maven {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
