--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,15 @@ dependencies {
 	modImplementation "io.netty:netty-transport-classes-epoll:4.1.82.Final"
 	modImplementation "io.netty:netty-transport-native-unix-common:4.1.82.Final"
 
+	// jansi support
+	modImplementation "org.jline:jline-terminal:3.12.1"
+	modImplementation "org.jline:jline-terminal-jansi:3.12.1"
+	modImplementation "net.minecrell:terminalconsoleappender:1.3.0"
+
+	include "org.jline:jline-terminal:3.12.1"
+	include "org.jline:jline-terminal-jansi:3.12.1"
+	include "net.minecrell:terminalconsoleappender:1.3.0"
+
 	//class modify
 	modImplementation "com.github.LlamaLad7:MixinExtras:0.1.1"
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
@@ -107,6 +116,7 @@ dependencies {
 
 	include "com.github.1798643961:mixin-tools:1.0.1"
 	include "com.github.LlamaLad7:MixinExtras:0.1.1"
+
 }
 
 base {
