--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
 	id 'fabric-loom' version '1.1-SNAPSHOT'
 	id 'maven-publish'
-	id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 version = ci_version()
@@ -32,10 +31,6 @@ repositories {
 		name = "Sponge"
 		url = 'https://repo.spongepowered.org/maven'
 	}
-}
-
-configurations {
-	extraLibs
 }
 
 dependencies {
@@ -107,10 +102,9 @@ dependencies {
 	modImplementation "org.jline:jline-terminal-jansi:3.12.1"
 	modImplementation "net.minecrell:terminalconsoleappender:1.3.0"
 
-	extraLibs group: "org.jline", name: "jline-terminal", version: "3.12.1"
-	extraLibs group: "org.jline", name: "jline-terminal-jansi", version: "3.12.1"
-	extraLibs group: "org.jline", name: "jline-terminal-jansi", version: "3.12.1"
-	extraLibs group: "net.minecrell", name: "terminalconsoleappender", version: "1.3.0"
+	include "org.jline:jline-terminal:3.12.1"
+	include "org.jline:jline-terminal-jansi:3.12.1"
+	include "net.minecrell:terminalconsoleappender:1.3.0"
 
 	//class modify
 	modImplementation "com.github.LlamaLad7:MixinExtras:0.1.1"
@@ -118,12 +112,11 @@ dependencies {
 	modImplementation 'com.github.1798643961:mixin-tools:1.0.1'
 	annotationProcessor 'com.github.1798643961:mixin-tools:1.0.1'
 	implementation "com.github.phase:SrgLib:master-SNAPSHOT"
+	include "com.github.phase:SrgLib:master-SNAPSHOT"
 
-	extraLibs group: "com.github.phase", name: "SrgLib", version: "master-SNAPSHOT"
-	extraLibs group: "com.github.1798643961", name: "mixin-tools", version: "1.0.1"
-	extraLibs group: "com.github.LlamaLad7", name: "MixinExtras", version: "0.1.1"
+	include "com.github.1798643961:mixin-tools:1.0.1"
+	include "com.github.LlamaLad7:MixinExtras:0.1.1"
 
-	configurations.api.extendsFrom( (configurations.extraLibs) )
 }
 
 base {
@@ -153,10 +146,18 @@ java {
 }
 
 jar {
-	duplicatesStrategy = DuplicatesStrategy.WARN
-	from("LICENSE")
-	from {
-		(configurations.extraLibs).filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
+	from("LICENSE") 
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+		}
+	}
+
+	repositories {
+
 	}
 }
 
