--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ base {
 
 loom {
 	accessWidenerPath = file("src/main/resources/banner.accesswidener")
+	log4jConfigs.from(file("src/main/resources/log4j2_banner.xml"))
 }
 
 processResources {
