fix yaml class not found

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// bukkit
-	implementation "org.yaml:snakeyaml:1.33"
+	implementation(include("org.yaml:snakeyaml:1.33"))
 	// LibraryLoader start
 	implementation "org.apache.maven:maven-resolver-provider:3.8.5"
 	implementation "org.apache.maven.resolver:maven-resolver-connector-basic:1.7.3"
