--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ dependencies {
 	implementation "org.slf4j:slf4j-api:2.0.6"
 
 	implementation "org.apache.logging.log4j:log4j-core:2.20.0"
-	implementation "org.apache.logging.log4j:log4j-iostreams:2.20.0"
+	implementation(include("org.apache.logging.log4j:log4j-iostreams:2.20.0"))
 	implementation "org.apache.logging.log4j:log4j-api:2.20.0"
 	implementation "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0"
 	implementation "org.apache.commons:commons-lang3:3.12.0"
@@ -179,6 +179,10 @@ publishing {
 	repositories {
 
 	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = 'UTF-8'
 }
 
 import groovy.json.JsonSlurper
