--- a/build.gradle
+++ b/build.gradle
@@ -116,9 +116,9 @@ dependencies {
 	implementation "io.netty:netty-transport-native-unix-common:4.1.82.Final"
 
 	// jansi support
-	implementation(include("org.jline:jline-terminal:3.12.1"))
+	implementation("org.jline:jline-terminal:3.12.1")
 	implementation(include("org.jline:jline-terminal-jansi:3.12.1"))
-	implementation(include("net.minecrell:terminalconsoleappender:1.3.0"))
+	implementation("net.minecrell:terminalconsoleappender:1.3.0")
 
 	//class modify
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
