--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20-pre7
+minecraft_version=1.20
 loader_version=0.14.21
 
 # Mod Properties
