--- a/gradle.properties
+++ b/gradle.properties
@@ -4,19 +4,12 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20-pre7
+minecraft_version=1.20
 loader_version=0.14.21
 
 # Mod Properties
 maven_group = com.mohistmc.banner
-archives_base_name = banner-1.20
+archives_base_name = banner-1.20.1
 
 # Dependencies
 fabric_version=0.83.0+1.20
-
-# loom
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
-loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
