--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ on : [push, pull_request]
 
 env:
   MINECRAFT_VERSION: 1.20
-  VERSION: 1.1.0+1.20
+  VERSION: 1.20.x
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
-  RELEASE_NAME: banner-1.20
+  RELEASE_NAME: banner-1.20.x
 
 jobs:
   build:
