--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,12 @@ name: Build Release
 
 on : [push, pull_request]
 
+env:
+  MINECRAFT_VERSION: 1.19.4
+  VERSION: 1.19.4
+  MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
+  RELEASE_NAME: banner-1.19.4
+
 jobs:
   build:
 
@@ -32,3 +38,16 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
+        
+      - name: Publish to ModRinth
+        uses: Kir-Antipov/mc-publish@v3.2
+        with:
+          modrinth-id: 7ntInrAy
+          modrinth-token: "${{env.MODRINTH_TOKEN}}"
+          name: "${{env.RELEASE_NAME}}"
+          version: "${{env.VERSION}}"
+          version-type: release
+
+          loaders: fabric
+          game-versions: '1.19.4'
+          java: "17"
