--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
+minecraft_version=1.20.1-rc1
 loader_version=0.14.21
 
 # Mod Properties
@@ -12,4 +12,4 @@ maven_group = com.mohistmc.banner
 archives_base_name = banner-1.20.1
 
 # Dependencies
-fabric_version=0.83.0+1.20
+fabric_version=0.83.0+1.20.1
