Fix ci build number

--- a/build.gradle
+++ b/build.gradle
@@ -188,7 +188,7 @@ tasks.withType(JavaCompile).configureEach {
 import groovy.json.JsonSlurper
 static String ci_version() {
 	try {
-		def conn = new URL("https://ci.codemc.io/job/MohistMC/job/Banner/api/json").openConnection()
+		def conn = new URL("https://ci.codemc.io/job/MohistMC/job/Banner-1.19.4/api/json").openConnection()
 		conn.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36")
 		conn.connect()
 		def root = conn.content.text
