--- a/build.gradle
+++ b/build.gradle
@@ -123,8 +123,7 @@ dependencies {
 	//class modify
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
 	modImplementation(include("com.github.wdog5:mixin-tools:1.0.1"))
-	modImplementation(include("com.github.LlamaLad7:MixinExtras:0.1.1"))
-
+	include(implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:0.2.0-beta.9")))
 	annotationProcessor 'com.github.wdog5:mixin-tools:1.0.1'
 
 	// mappings remapper
