--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
+fabric.loom.multiProjectOptimisation=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
