--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,7 @@ dependencies {
 	// jansi support
 	implementation(include("org.jline:jline-terminal:3.12.1"))
 	implementation(include("org.jline:jline-terminal-jansi:3.12.1"))
-	implementation(include("net.minecrell:terminalconsoleappender:1.3.0"))
+	implementation(include("net.minecrell:terminalconsoleappender:1.4.0"))
 
 	//class modify
 	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.1"
@@ -148,9 +148,15 @@ processResources {
 	}
 }
 
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
+}
+
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
-	options.compilerArgs << '-Xlint:-dep-ann' << '-Xlint:-removal'
+	options.encoding = 'UTF-8'
+	options.warnings = false // Shutup deprecated for removal warnings
 }
 
 java {
@@ -182,10 +188,6 @@ publishing {
 	repositories {
 
 	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	options.encoding = 'UTF-8'
 }
 
 import groovy.json.JsonSlurper
