Don't include fabric api

--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 
 	// Add each module as a dependency
 	apiModules.forEach {
-		include(modImplementation(fabricApi.module(it, "${project.fabric_version}")))
+		modImplementation(fabricApi.module(it, "${project.fabric_version}"))
 	}
 
 	// bukkit
