Do not hide mixin warning

--- a/build.gradle
+++ b/build.gradle
@@ -179,7 +179,7 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
-	options.warnings = false // Shutup deprecated for removal warnings
+	options.compilerArgs << '-Xlint:-dep-ann' << '-Xlint:-removal'
 }
 
 java {
