--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,7 @@ dependencies {
 	implementation(include("net.kyori:adventure-text-serializer-legacy:4.14.0"))
 	implementation(include("net.kyori:adventure-text-serializer-plain:4.14.0"))
 	implementation(include("net.kyori:adventure-text-logger-slf4j:4.14.0"))
+	implementation(include("net.kyori:examination-api:1.3.0"))
 }
 
 base {
