--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,9 @@ plugins {
 	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'maven-publish'
 	id 'org.ajoberstar.grgit' version '5.2.0'
-	id "com.peterabeles.gversion" version "1.10.2"
 }
 
-project.compileJava.dependsOn(createVersionFile)
-
-gversion {
-	srcDir = "src/main/java/"
-	classPackage = "com.mohistmc.banner"
-	className = "VersionInfo"
-}
-
-version = ci_version()
+version = project.minecraft_version + "-" + ci_version()
 group = project.maven_group
 
 repositories {
@@ -149,10 +140,6 @@ dependencies {
 
 }
 
-base {
-	archivesName = project.archives_base_name
-}
-
 loom {
 	accessWidenerPath = file("src/main/resources/banner.accesswidener")
 	log4jConfigs.from(file("src/main/resources/log4j2_banner.xml"))
@@ -178,11 +165,6 @@ tasks.withType(JavaCompile).configureEach {
 	options.compilerArgs << '-Xlint:-dep-ann' << '-Xlint:-removal'
 }
 
-java {
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
-}
-
 jar {
 	from("LICENSE")
 	manifest {
@@ -192,7 +174,7 @@ jar {
 				'Specification-Vendor'  : 'MohistMC',
 				'Specification-Version' : ci_version(),
 				'Implementation-Title'  : 'Banner',
-				'Implementation-Version': '1.20-' + ci_version(),
+				'Implementation-Version': version,
 				'Implementation-Vendor' : 'MohistMC'
 		)
 	}
@@ -204,7 +186,6 @@ publishing {
 			from components.java
 		}
 	}
-
 	repositories {
 
 	}
@@ -223,6 +204,6 @@ static String ci_version() {
 		def number = data.substring(data.indexOf("number")).split(",")
 		return Integer.valueOf(number[0].replace("number=", "")).intValue()
 	} catch (Exception ignored) {
-		return '1.20'
+		return "${project.minecraft_version}"
 	}
 }
