--- a/build.gradle
+++ b/build.gradle
@@ -204,6 +204,6 @@ static String ci_version() {
 		def number = data.substring(data.indexOf("number")).split(",")
 		return Integer.valueOf(number[0].replace("number=", "")).intValue()
 	} catch (Exception ignored) {
-		return "1.20.1"
+		return project.minecraft_version
 	}
 }
