--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,12 @@ java {
 	}
 }
 
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+}
+
 tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
 	options.compilerArgs << '-Xlint:-dep-ann' << '-Xlint:-removal'
