--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ loader_version=0.14.21
 
 # Mod Properties
 maven_group = com.mohistmc.banner
+archives_base_name = banner
 
 # Dependencies
 fabric_version=0.83.0+1.20.1
