--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,20 @@ dependencies {
 
 	// Kyori
 	implementation(include("net.kyori:adventure-platform-fabric:5.9.0"))
+	// Paper start
+	implementation(include("net.kyori:adventure-api:4.14.0"))
+	implementation(include("net.kyori:adventure-key:4.14.0"))
+	implementation(include("net.kyori:adventure-text-minimessage:4.14.0"))
+	implementation(include("net.kyori:adventure-text-serializer-gson:4.14.0"))
+	implementation(include("net.kyori:adventure-text-serializer-json:4.14.0"))
+	implementation(include("net.kyori:adventure-text-serializer-legacy:4.14.0"))
+	implementation(include("net.kyori:adventure-text-serializer-plain:4.14.0"))
+	implementation(include("net.kyori:adventure-text-serializer-ansi:4.14.0"))
+	implementation(include("net.kyori:adventure-text-logger-slf4j:4.14.0"))
+	implementation(include("net.kyori:ansi:1.0.3"))
+	implementation(include("net.kyori:examination-api:1.3.0"))
+	implementation(include("net.kyori:examination-string:1.3.0"))
+	// Paper end
 }
 
 loom {
