--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,8 @@ dependencies {
 	implementation "org.apache.maven:maven-model-builder:3.8.5"
 	implementation "org.apache.maven:maven-repository-metadata:3.8.5"
 	compileOnly "org.jetbrains:annotations:21.0.1"
-	implementation(include("com.mohistmc:i18n:0.2"))
+	implementation(include("com.mohistmc:i18n:0.6"))
+	implementation(include("com.mohistmc:dynamicenum:0.3"))
 
 	// craftbukkit
 	implementation "org.fusesource.jansi:jansi:1.18"
@@ -81,7 +82,6 @@ dependencies {
 	// spigot
 	implementation "net.md-5:bungeecord-chat:1.16-R0.4"
 	implementation "io.izzel:tools:1.3.0"
-	implementation "com.mohistmc:dynamicenum:0.1"
 
 	implementation "com.google.guava:failureaccess:1.0.1"
 	implementation "com.google.guava:guava:31.0.1-jre"
