--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 
 	compileOnly "org.jetbrains:annotations:21.0.1"
 
-	// bukkit
+	// banner
 	implementation(include("org.yaml:snakeyaml:2.0"))
 	implementation(include("com.mohistmc:i18n:0.6"))
 	implementation(include('com.mohistmc:json:0.5'))
@@ -78,29 +78,32 @@ dependencies {
 	implementation(include('com.mohistmc:dynamicenum:0.3'))
 	implementation(include('javax.inject:javax.inject:1'))
 	// jansi support
+	implementation(include("org.jline:jline-reader:3.21.0"))
 	implementation(include("org.jline:jline-terminal:3.21.0"))
 	implementation(include("org.jline:jline-terminal-jansi:3.21.0"))
 	implementation(include("net.minecrell:terminalconsoleappender:1.4.0"))
 
 	// craftbukkit
-	implementation "org.fusesource.jansi:jansi:1.18"
-	implementation "jline:jline:2.14.6"
-	implementation "com.googlecode.json-simple:json-simple:1.1.1"
-	implementation "org.xerial:sqlite-jdbc:3.42.0.0"
-	implementation "com.mysql:mysql-connector-j:8.0.33"
+	implementation(include("org.fusesource.jansi:jansi:1.18"))
+	implementation(include("jline:jline:2.14.6"))
+	implementation(include("com.googlecode.json-simple:json-simple:1.1.1"))
+	implementation(include("org.xerial:sqlite-jdbc:3.42.0.0"))
+	implementation(include("com.mysql:mysql-connector-j:8.0.33"))
+	implementation(include("org.checkerframework:checker-qual:2.0.0"))
 
-	implementation "net.md-5:SpecialSource:1.11.2"
+	implementation(include("net.md-5:SpecialSource:1.11.2"))
+	implementation(include("commons-codec:commons-codec:1.16.0"))
 
 	// spigot
-	implementation "net.md-5:bungeecord-chat:1.16-R0.4"
-	implementation "io.izzel:tools:1.3.0"
+	implementation(include("net.md-5:bungeecord-chat:1.16-R0.4"))
+	implementation(include("io.izzel:tools:1.3.0"))
 
 	implementation "com.google.guava:failureaccess:1.0.1"
 	implementation "com.google.guava:guava:31.0.1-jre"
 	implementation "com.google.code.gson:gson:2.10"
 	implementation "com.mojang:authlib:3.17.30"
 	implementation "com.mojang:logging:1.1.1"
-	compileOnly "commons-lang:commons-lang:2.6"
+	implementation(include("commons-lang:commons-lang:2.6-mohist"))
 	implementation "org.slf4j:slf4j-api:2.0.6"
 
 	implementation "org.apache.logging.log4j:log4j-core:2.20.0"
