--- a/build.gradle
+++ b/build.gradle
@@ -77,11 +77,7 @@ dependencies {
 	implementation(include('com.mohistmc:tools:0.5.1'))
 	implementation(include('com.mohistmc:dynamicenum:0.3'))
 	implementation(include('javax.inject:javax.inject:1'))
-	// jansi support
-	implementation(include("org.jline:jline-reader:3.21.0"))
-	implementation(include("org.jline:jline-terminal:3.21.0"))
-	implementation(include("org.jline:jline-terminal-jansi:3.21.0"))
-	implementation(include("net.minecrell:terminalconsoleappender:1.4.0"))
+	implementation(include("net.sf.jopt-simple:jopt-simple:5.0.4"))
 
 	// craftbukkit
 	implementation(include("org.fusesource.jansi:jansi:1.18"))
