--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,10 @@ name: Build And Publish to Modrinth
 on : [push, pull_request]
 
 env:
-  MINECRAFT_VERSION: 1.20.1
-  VERSION: 1.20.x-snapshot
+  MINECRAFT_VERSION: 1.21
+  VERSION: 1.21-snapshot
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
-  RELEASE_NAME: banner-1.20.x
+  RELEASE_NAME: banner-1.21
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'adopt'
       - name: Set version env
         run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
@@ -49,5 +49,5 @@ jobs:
           version-type: release
 
           loaders: fabric
-          game-versions: '1.20.1'
-          java: "17"
+          game-versions: '1.21'
+          java: "21"
