Upgrade mappings io version

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,9 @@ dependencies {
 loom {
 	accessWidenerPath = file("src/main/resources/banner.accesswidener")
 	log4jConfigs.from(file("src/main/resources/log4j2_banner.xml"))
+	mixin {
+		useLegacyMixinAp = true
+	}
 }
 
 processResources {
