--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,7 @@ def moduleDependencies(Project project, List<String> depNames) {
     }
     project.dependencies {
         deps.each {
-            api(include(it))
+            api(implementation(it))
         }
     }
 }
